Version 2023.1.0 (2023-01-01)
- API Cleanup

Version 2022.12.12 (2022-12-30)
- Add un_ignore list to central config
- Fix entity_definition schema
- Rename cache_dict to persistant_cache
- Reduce access to internal complex objects for custom_component

Version 2022.12.11 (2022-12-28)
- Rename climate presets from 'Profile *' to 'week_program_*'
- Add support for python 3.11

Version 2022.12.10 (2022-12-27)
- Make constant assignment final
- Fix native device units

Version 2022.12.9 (2022-12-25)
- Remove empty unit for numeric sysvars
- Add enable_default to entity
- Remove some warn level parameters from ignore list

Version 2022.12.8 (2022-12-22)
- Reformat code / check with flake8
- Refactor entity inheritance

Version 2022.12.7 (2022-12-21)
- Send ERROR_* parameters as homematic.device_error event

Version 2022.12.6 (2022-12-20)
- Add additional checks for custom entities
- Code Cleanup

Version 2022.12.5 (2022-12-17)
- Code Cleanup
 - Remove sub_type from model to simplify code
 - Remove obsolete methods
 - Refactor binary_sensor check
 - Convert value_list to tuple
 - Use tuple for immutable lists

Version 2022.12.4 (2022-12-13)
- Fix disable away_mode in climate. Now goes back to the origin control_mode.

Version 2022.12.3 (2022-12-12)
- Disable temperature validation for setting to off for HM heating group HM-CC-VG-1

Version 2022.12.2 (2022-12-09)
- Add HM-LC-AO-SM as light
- Remove hub from HmPlatform
- Hub is no longer an entity

Version 2022.12.1 (2022-12-01)
- Improve naming of modules
- Add new platform for text sysvars

Version 2022.12.0 (2022-12-01)
- Add transition to light turn_off
- Remove min brightness of 10 for lights

Version 2022.11.2 (2022-11-13)
- Generalize some collection helpers

Version 2022.11.1 (2022-11-03)
- Rename protected attributes to _attr*
- Code cleanup
- Add option to wrap entities to a different platform
  - Wrap LEVEL of HmIP-TRV*, HmIP-HEATING to sensor

Version 2022.11.0 (2022-11-02)
- Rename ATTR_HM_* to HM*