@@ -1,5 +1,8 @@
 Version 2023.1.0 (2023-01-01)
 - API Cleanup
+- Allow to disable cache
+- Allow to disable un_ignore load
+- Add local client
 
 Version 2022.12.12 (2022-12-30)
 - Add un_ignore list to central config
